Removes deprecated constructors.